core logic fixes for expense report calculations and logging pattern updated,added category mappings constant as well