@@ -1,20 +1,22 @@
 package com.expensys.service;
 
+import com.expensys.convertor.ExpenseToReportConvertor;
 import com.expensys.model.Expense;
-import com.expensys.model.enums.Category;
 import com.expensys.model.request.ReportRequest;
 import com.expensys.model.response.Report;
 import com.expensys.repository.CategoryMappingRepository;
-import com.expensys.convertor.ExpenseToReportConvertor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+
+import static com.expensys.constant.CategoryMappings.MAIN_CATEGORIES;
 
 @Service
 public class MainCategoryReportService implements ICategoryReportService {
+    private static final Logger logger = LoggerFactory.getLogger(MainCategoryReportService.class);
     private final CategoryMappingRepository categoryMappingRepository;
 
     @Autowired
@@ -24,8 +26,8 @@ public class MainCategoryReportService implements ICategoryReportService {
 
     @Override
     public List<Report> prepareReport(ReportRequest reportRequest, List<Expense> expenseList) {
-        Set<Category> mainCategories = categoryMappingRepository.findDistinctMainCategoryByMainCategoryType(Category.MAIN).stream().collect(Collectors.toSet());
-        expenseList = expenseList.stream().filter(expense -> mainCategories.contains(expense.getCategory())).collect(Collectors.toList());
+
+        expenseList = expenseList.stream().filter(expense -> MAIN_CATEGORIES.contains(expense.getCategory())).toList();
         return ExpenseToReportConvertor.getInstance().prepareReportListFromExpenseList(expenseList, reportRequest);
     }
 
